# alphalabs

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  feature_list.json  init.sh  main.py  progress.txt  pyproject.toml  requirements-dev.txt  requirements.txt  rust-toolchain.toml
architecture/: README.md  ib_paper_account_evidence.json  runtime_services.json
crates/atp-adapters/: Cargo.toml
crates/atp-adapters/src/: connection_control.rs  interactive_brokers.rs  lib.rs
crates/atp-adapters/src/interactive_brokers/: wire.rs
crates/atp-adapters/tests/: srs_exe_003_order_types.rs  srs_exe_004_composite_order.rs  srs_exe_006_ib_adapter.rs  srs_exe_006_ib_diagnostic.rs  srs_exe_006_ib_wire.rs
crates/atp-execution/: Cargo.toml
crates/atp-execution/src/: corporate_action_orders.rs  corporate_action_positions.rs  designation.rs  kill_switch.rs  kill_switch_probe.rs  lib.rs  live_state.rs  order_routing.rs  outbox.rs
crates/atp-execution/tests/: err_1_no_ib_side_effect.rs  err_2_connectivity_blocked.rs  err_3_stale_data_blocked.rs  err_8_kill_switch_liquidation_timeout.rs  srs_data_019_corp_action_notify.rs  srs_data_019_resting_order_corp_action.rs  srs_data_020_corp_action_notify.rs  srs_data_020_position_corp_action.rs  srs_err_001_error_envelope_cli.rs  srs_exe_001_live_designation.rs  srs_exe_002_order_routing.rs  srs_exe_005_live_state_recovery.rs  srs_exe_009_durable_submit.rs  srs_exe_009_outbox_reconcile.rs  srs_exe_009_outbox_reconcile_cli.rs  srs_safe_001_kill_switch_activation.rs  srs_safe_002_polling_probe.rs
crates/atp-factor-pipeline/: Cargo.toml
crates/atp-factor-pipeline/src/: factor_analysis.rs  factor_job.rs  lib.rs  store_inputs.rs
crates/atp-factor-pipeline/tests/: srs_bt_006_factor_analysis.rs  srs_bt_006_tear_sheet_cli.rs  srs_data_005_fundamental_ingest.rs  srs_data_007_store_market_inputs.rs  srs_fac_001_factor_job.rs  srs_fac_001_store_backed_job.rs
crates/atp-orchestrator/: Cargo.toml
crates/atp-orchestrator/src/: kill_switch_activation.rs  kill_switch_timeout.rs  lib.rs  order_routing_wiring.rs
crates/atp-orchestrator/tests/: err_7_hot_swap_demotion_timeout.rs  exe002_cli_fail_closed.rs  orch_1_lifecycle_contract.rs  orch_2_resource_profile_contract.rs  orch_3_workload_priority_contract.rs  orch_4_deployment_version_contract.rs  orch_5_cli_fail_closed.rs  orch_5_rollback_contract.rs  resv_3_cli_fail_closed.rs  resv_3_hot_swap_triggers.rs  safe_002_liquidation_timeout_scenario.rs  srs_err_001_broker_envelope_cli.rs  srs_err_001_broker_envelope_live.rs  srs_exe_002_routing_wiring.rs
crates/atp-simulation/: Cargo.toml
crates/atp-simulation/src/: backtest.rs  backtest_store.rs  benchmark.rs  corporate_actions.rs  cost.rs  determinism.rs  fill_model.rs  halt.rs  halt_fleet.rs  launch.rs  lib.rs  metrics.rs  paper_metrics.rs  paper_order.rs  paper_state.rs  sim.rs  store_bar_source.rs  sweep.rs  virtual_ledger.rs  virtual_orders.rs
crates/atp-simulation/tests/: srs_bt_001_backtest_engine.rs  srs_bt_001_cli.rs  srs_bt_002_cost_cli.rs  srs_bt_002_cost_models.rs  srs_bt_003_cost_cli.rs  srs_bt_003_shared_cost_family.rs  srs_bt_004_metrics.rs  srs_bt_005_benchmark.rs  srs_bt_005_benchmark_cli.rs  srs_bt_007_cli.rs  srs_bt_007_parameter_sweep.rs  srs_bt_009_backtest_store.rs  srs_bt_009_cli.rs  srs_bt_009_persist_query.rs  srs_bt_010_cross_process.rs  srs_bt_010_determinism.rs  srs_data_007_store_bar_source.rs  srs_data_021_paper_corp_action.rs  srs_exe_004_paper_composite.rs  srs_safe_001_halt_fleet.rs  srs_safe_001_paper_halt.rs  srs_sim_001_paper_order_cli.rs  srs_sim_001_paper_order_intake.rs  srs_sim_002_fill_cli.rs  srs_sim_002_fill_models.rs  srs_sim_003_ledger_cli.rs  srs_sim_003_virtual_ledger.rs  srs_sim_004_paper_state.rs  srs_sim_004_persist_cli.rs
crates/atp-types/: Cargo.toml
crates/atp-types/src/: composite_order.rs  lib.rs  order_event.rs  order_lifecycle.rs  order_type.rs  perf.rs
crates/atp-types/tests/: srs_exe_003_order_type.rs  srs_exe_005_ledger_restore.rs  srs_exe_008_order_lifecycle.rs  srs_perf_001_latency_percentiles.rs  srs_sdk_004_order_event.rs
docker/: core-runtime.Dockerfile  dashboard-api.Dockerfile  (+3 more)
python/: atp_logging_boot.py  pyproject.toml
python/atp_api/: README.md  __init__.py  openapi.json  openapi.py  routes.py
python/atp_cli/: README.md  __init__.py  __main__.py  commands.py  manual.json  manual.py  runner.py
python/atp_config/: README.md  __init__.py  schema.py  validate.py  vault.py
python/atp_dashboard/: README.md  __init__.py  __main__.py  account.py  alerts.py  backtests.py  heartbeat.py  inventory.py  killswitch.py  loadgen.py  provider.py  publisher.py  research.py  reservoir.py  server.py
python/atp_dashboard/assets/: app.js  freshness.js  index.html  styles.css
python/atp_logging/: README.md  __init__.py  dispatcher.py  errors.py  persistence.py  records.py  redaction.py
python/atp_orchestration/: README.md  __init__.py  rollback_handler.py
python/atp_readiness/: README.md  __init__.py  errors.py  gate.py  handlers.py  override.py  probes.py  runtime.py  runtime_cli.py  wiring.py
python/atp_reliability/: README.md  __init__.py  __main__.py  availability.py  boot_evidence.py  cli.py  evidence.py  restart.py  restart_cli.py
python/atp_research/: __init__.py  data.py  indicators.py  plotting.py
python/atp_research_proxy/: __init__.py  __main__.py  forwarder.py
python/atp_runtime/: README.md  __init__.py  __main__.py  cli_dispatch.py  contract.py  errors.py  handlers.py  proxy.py  registry.py  rest_server.py  runtime.py  ws_frames.py  ws_protocol.py
python/atp_safety/: README.md  __init__.py  audit.py  backend.py  handlers.py  state.py  timeout.py  wiring.py
python/atp_strategy/: README.md  __init__.py  api.py  calendar.py  dispatch.py  indicators.py  resample.py  scheduler.py  store_history.py  warmup.py
python/atp_strategy/examples/: __init__.py  _harness.py  dual_asset_analytics.py  hello.py  sma_crossover.py
python/atp_ws/: README.md  __init__.py  asyncapi.json  asyncapi.py  channels.py
(+436 files in other folders)
