[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atp-strategy"
version = "0.1.0"
description = "Python Strategy API boundary for ATP user-authored strategies."
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["atp_strategy*"]
