[package]
name = "atp-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# SRS-ERR-001 structured order-error envelope operator CLI. Drives the real
# ExecutionEngine::submit_live_order reject paths and proves every order-submission error is a
# complete structured envelope (category + type + message + unchanged original order) that reaches no
# brokerage. std-only; depends only on the already-declared atp-execution / atp-types crates.
[[bin]]
name = "err001_error_envelope_cli"
path = "src/bin/err001_error_envelope_cli.rs"

# SRS-EXE-009 durable-outbox restart-reconciliation operator + fault-injection CLI. Drives the real
# atp_execution::outbox types through the AC scenarios a restart exercises (write-ahead commit ->
# save_to_path -> a fresh load_from_path = the process-restart boundary) against scripted broker
# snapshots (mocked IB), proving a bound/ambiguous intent is never resubmitted. std-only; depends only
# on the already-declared atp-execution / atp-types crates.
[[bin]]
name = "exe009_outbox_reconcile_cli"
path = "src/bin/exe009_outbox_reconcile_cli.rs"

# SRS-DATA-019 resting-order corporate-action planner. Drives the real
# atp_execution::corporate_action_orders planner over fixture resting orders + a fixture corporate
# action (split/reverse-split/delisting), emitting per-order adjust/cancel JSON with the operator
# notification + strategy-callback intents. Pure planner; the live order state + broker cancel wiring
# is deferred (SRS-EXE-001/006). std-only; depends only on the already-declared atp-execution /
# atp-types crates.
[[bin]]
name = "data019_order_lifecycle_corp_action_cli"
path = "src/bin/data019_order_lifecycle_corp_action_cli.rs"

[dependencies]
atp-strategy-engine = { path = "../atp-strategy-engine" }
atp-types = { path = "../atp-types" }

[dev-dependencies]
atp-data = { path = "../atp-data" }

[lints]
workspace = true
