[package]
name = "atp-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# SRS-RESV-003 Hot-Swap trigger configuration + logging operator CLI. Demonstrates
# the configurable manual + automatic triggers, the default-disabled posture, and
# the swap-trigger log. The dashboard/REST arms of the surface are deferred to
# SRS-UI-001 / UI-5 and SRS-API-001.
[[bin]]
name = "resv003_hot_swap_trigger_cli"
path = "src/bin/resv003_hot_swap_trigger_cli.rs"

# SRS-SAFE-001 kill-switch activation operator CLI. Drives the REAL
# atp-execution activation gate over a REAL LiveExecutionState + REAL
# atp-simulation PaperEngineFleet with the deterministic mocked-IB fixture
# transport the feature's own verification steps prescribe (scenario mode),
# and the NFR-P3 perf run (perf mode). The python/atp_safety backend shells
# this binary; the live IB transport is the deferred SRS-EXE-006 adapter.
[[bin]]
name = "safe001_kill_switch_cli"
path = "src/bin/safe001_kill_switch_cli.rs"

[[bin]]
name = "safe002_liquidation_timeout_cli"
path = "src/bin/safe002_liquidation_timeout_cli.rs"

# SRS-EXE-002 order-routing operator CLI. The fixture-verification workflow:
# drives N paper (+ optionally the one designated live) strategy orders through
# the REAL ExecutionEngine::dispatch_order over the wired real
# PaperSimulationEngine (InternalSimulationSubmit port) and real
# InteractiveBrokersBrokerage (LiveBrokerageSubmit port) with the deterministic
# mocked-IB recording transport — the AC-10 evidence that paper strategy orders
# never create IB orders. NOT the deployed strategy-runtime order path (that is
# the deferred SRS-SDK / SRS-ORCH-* leg). The IB paper account stays reachable
# ONLY via the operator-initiated SRS-EXE-006 adapter integration test.
[[bin]]
name = "exe002_order_routing_cli"
path = "src/bin/exe002_order_routing_cli.rs"

# SRS-ORCH-005 rollback operator CLI. Demonstrates the SYS-80 previous-version
# retention, the exact-target rollback gate, and the NFR-S2 live-rollback
# confirmation control (structural mirror of live promotion's). The runtime's
# CLI/REST lifecycle dispatch shells this bin (python/atp_orchestration); the
# dashboard control is deferred to SRS-UI-001, and the real live-designation
# probe to SRS-EXE-001 / SRS-RESV-*.
[[bin]]
name = "orch005_rollback_cli"
path = "src/bin/orch005_rollback_cli.rs"

# SRS-ERR-001 BROKER-SIDE structured-error envelope operator CLI. The companion to
# atp-execution's err001_error_envelope_cli: that one covers the reject paths
# reachable at the execution boundary, this one covers the SyRS SYS-64
# broker-validation categories (INVALID_SYMBOL / INSUFFICIENT_BUYING_POWER /
# RATE_LIMITED). It lives here because atp-execution must not depend on
# atp-adapters (SRS-ARCH-002), so only the composition layer can drive the REAL
# ExecutionEngine -> IbBrokerageBridge -> InteractiveBrokersBrokerage ->
# classify_ib_order_error chain. The only fixture is the transport
# (ScriptedIbGateway supplies a vendor code + message, exactly what a socket
# carries); observing a REAL gateway emit these rejections is the operator-gated
# srs_err_001_broker_envelope_live test.
[[bin]]
name = "err001_broker_envelope_cli"
path = "src/bin/err001_broker_envelope_cli.rs"

[dependencies]
# The orchestrator is the composition layer (SRS-ARCH-001): it is allowed to
# see both the execution gate and the simulation fleet, which stay
# independent of each other (SRS-ARCH-002 dependency direction). The
# SRS-SAFE-002 kill-switch-timeout composition additionally binds the
# adapter boundary (IB cancel/disconnect) and the SRS-NOTIF-001 operator
# notifier here — the lower crates never see each other.
atp-adapters = { path = "../atp-adapters" }
atp-execution = { path = "../atp-execution" }
atp-notification = { path = "../atp-notification" }
atp-simulation = { path = "../atp-simulation" }
atp-types = { path = "../atp-types" }

[features]
# Pass-through to the adapter's operator-initiated live IB socket transport. OFF
# by default for the same reason it is off there (SyRS SYS-2e: the real gateway
# binds a fixed shared port and cannot run in the parallel agent pool). The
# operator enables it to run the SRS-ERR-001 live broker-rejection gate,
# tests/srs_err_001_broker_envelope_live.rs.
ib-live-transport = ["atp-adapters/ib-live-transport"]

[lints]
workspace = true
