[package]
name = "atp-simulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# SRS-BT-009 Phase 2 operator persist/query CLI (docs/plans/bt009-closeout.md §6). A thin binary
# over the public BacktestResultStore API — there is no Python<->Rust runtime bridge, so the
# operator "CLI/API workflow" the acceptance names is demonstrated here in the Rust core.
[[bin]]
name = "bt009_store_cli"
path = "src/bin/bt009_store_cli.rs"

# SRS-BT-010 cross-process reproducibility CLI. Runs the fixture backtest in a FRESH process and
# prints the input-manifest + run digests, so two fresh-process runs can be compared for
# byte-identical output — the cross-process determinism closure a same-process double-run cannot
# establish. A thin binary over the public determinism API (no Python<->Rust runtime bridge).
[[bin]]
name = "bt010_repro_cli"
path = "src/bin/bt010_repro_cli.rs"

# SRS-BT-002 configurable transaction-cost operator CLI. Builds a per-run CostConfig from flags and
# applies it to the SAME fixture strategy, demonstrating "defaults match SyRS values" and "override
# without changing strategy code" (SYS-15d). A thin binary over the public cost + backtest API — the
# CLI half of the deferred operator override surface (no Python<->Rust runtime bridge).
[[bin]]
name = "bt002_cost_cli"
path = "src/bin/bt002_cost_cli.rs"

[dependencies]
atp-strategy-engine = { path = "../atp-strategy-engine" }
atp-types = { path = "../atp-types" }

[dev-dependencies]
atp-data = { path = "../atp-data" }

[lints]
workspace = true
