[package]
name = "atp-simulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# SRS-BT-009 Phase 2 operator persist/query CLI (docs/plans/bt009-closeout.md §6). A thin binary
# over the public BacktestResultStore API — there is no Python<->Rust runtime bridge, so the
# operator "CLI/API workflow" the acceptance names is demonstrated here in the Rust core.
[[bin]]
name = "bt009_store_cli"
path = "src/bin/bt009_store_cli.rs"

# SRS-BT-010 cross-process reproducibility CLI. Runs the fixture backtest in a FRESH process and
# prints the input-manifest + run digests, so two fresh-process runs can be compared for
# byte-identical output — the cross-process determinism closure a same-process double-run cannot
# establish. A thin binary over the public determinism API (no Python<->Rust runtime bridge).
[[bin]]
name = "bt010_repro_cli"
path = "src/bin/bt010_repro_cli.rs"

# SRS-BT-002 configurable transaction-cost operator CLI. Builds a per-run CostConfig from flags and
# applies it to the SAME fixture strategy, demonstrating "defaults match SyRS values" and "override
# without changing strategy code" (SYS-15d). A thin binary over the public cost + backtest API — the
# CLI half of the deferred operator override surface (no Python<->Rust runtime bridge).
[[bin]]
name = "bt002_cost_cli"
path = "src/bin/bt002_cost_cli.rs"

# SRS-BT-005 benchmark-comparison operator CLI. Builds a BenchmarkSelection from flags (no
# --benchmark ⇒ the SPY default), runs the SAME fixture strategy through the real engine, resolves
# the benchmark through a fixture source, and renders the real compare() report — the CLI half of the
# deferred operator rendering surface (the real stored-data source is SRS-DATA-007, the dashboard is
# SRS-UI/SRS-API; no Python<->Rust runtime bridge).
[[bin]]
name = "benchmark_comparison_cli"
path = "src/bin/benchmark_comparison_cli.rs"

# SRS-BT-003 shared transaction-cost-family operator CLI. Runs the SAME fixture strategy over the
# SAME bars through BOTH the BacktestEngine and the PaperSimulationEngine under one CostConfig and
# proves the per-fill cost decomposition is identical (cost-family-match:true) — the operator-
# demonstrable form of "a paper strategy and backtest using identical cost configuration compute
# fills and commissions from the same model family". A thin binary over the public cost + backtest
# + sim API (no Python<->Rust runtime bridge).
[[bin]]
name = "bt003_shared_cost_cli"
path = "src/bin/bt003_shared_cost_cli.rs"

[dependencies]
atp-strategy-engine = { path = "../atp-strategy-engine" }
atp-types = { path = "../atp-types" }

[dev-dependencies]
atp-data = { path = "../atp-data" }

[lints]
workspace = true
