[package]
name = "atp-simulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

# SRS-BT-001 operator backtest launch CLI. Launches a deterministic backtest over an
# operator-selected [--start, --end] calendar window (parsed by the shared
# `launch::parse_window` binding), reading bars from the platform's stored catalog via the
# real `StoreBarSource` (SRS-DATA-007 unified query) — the "system data + configurable date
# range" halves of the SRS-BT-001 acceptance, demonstrated over shipped product code. The
# user-uploaded Parquet reader, the Python strategy host, and the REST/dashboard launch
# surface (SRS-API-001 / SRS-UI) remain deferred, so SRS-BT-001 stays passes:false.
[[bin]]
name = "bt001_backtest_cli"
path = "src/bin/bt001_backtest_cli.rs"

# SRS-BT-009 Phase 2 operator persist/query CLI (docs/plans/bt009-closeout.md §6). A thin binary
# over the public BacktestResultStore API — there is no Python<->Rust runtime bridge, so the
# operator "CLI/API workflow" the acceptance names is demonstrated here in the Rust core.
[[bin]]
name = "bt009_store_cli"
path = "src/bin/bt009_store_cli.rs"

# SRS-BT-010 cross-process reproducibility CLI. Runs the fixture backtest in a FRESH process and
# prints the input-manifest + run digests, so two fresh-process runs can be compared for
# byte-identical output — the cross-process determinism closure a same-process double-run cannot
# establish. A thin binary over the public determinism API (no Python<->Rust runtime bridge).
[[bin]]
name = "bt010_repro_cli"
path = "src/bin/bt010_repro_cli.rs"

# SRS-BT-002 configurable transaction-cost operator CLI. Builds a per-run CostConfig from flags and
# applies it to the SAME fixture strategy, demonstrating "defaults match SyRS values" and "override
# without changing strategy code" (SYS-15d). A thin binary over the public cost + backtest API — the
# CLI half of the deferred operator override surface (no Python<->Rust runtime bridge).
[[bin]]
name = "bt002_cost_cli"
path = "src/bin/bt002_cost_cli.rs"

# SRS-BT-005 benchmark-comparison operator CLI. Builds a BenchmarkSelection from flags (no
# --benchmark ⇒ the SPY default), runs the SAME fixture strategy through the real engine, resolves
# the benchmark through a fixture source, and renders the real compare() report — the CLI half of the
# deferred operator rendering surface (the real stored-data source is SRS-DATA-007, the dashboard is
# SRS-UI/SRS-API; no Python<->Rust runtime bridge).
[[bin]]
name = "benchmark_comparison_cli"
path = "src/bin/benchmark_comparison_cli.rs"

# SRS-BT-003 shared transaction-cost-family operator CLI. Runs the SAME fixture strategy over the
# SAME bars through BOTH the BacktestEngine and the PaperSimulationEngine under one CostConfig and
# proves the per-fill cost decomposition is identical (cost-family-match:true) — the operator-
# demonstrable form of "a paper strategy and backtest using identical cost configuration compute
# fills and commissions from the same model family". A thin binary over the public cost + backtest
# + sim API (no Python<->Rust runtime bridge).
[[bin]]
name = "bt003_shared_cost_cli"
path = "src/bin/bt003_shared_cost_cli.rs"

# SRS-SIM-003 virtual-ledger operator CLI: "maintain an independent virtual position ledger for each
# paper strategy". A thin binary over the public sim + virtual_ledger API (no Python<->Rust bridge).
[[bin]]
name = "sim003_ledger_cli"
path = "src/bin/sim003_ledger_cli.rs"

# SRS-SIM-004 paper-state persistence operator CLI: "persist paper strategy simulation state". A thin
# binary over the public paper_state API (capture_full/save_to_path/recover_from_path over the real
# ledger + metrics + user-state fixture) — demonstrates the atomic on-disk store, the SYS-89 30s
# restore-deadline enforcement, cross-process survival, and fail-closed fault injection (no Python<->
# Rust bridge).
[[bin]]
name = "sim004_persist_cli"
path = "src/bin/sim004_persist_cli.rs"

# SRS-SIM-002 configurable fill-model operator CLI: "simulate fills using live market data and
# configurable fill models". A thin binary over the public fill_model API (PaperSimulationEngine::
# evaluate_fill over a MarketSnapshot + per-strategy FillModelConfig) — demonstrates the SYS-83 fill
# rules, the per-strategy limit-model divergence, and the SYS-87b volume cap (no Python<->Rust bridge).
[[bin]]
name = "sim002_fill_cli"
path = "src/bin/sim002_fill_cli.rs"

# SRS-SIM-001 paper order-intake operator CLI: "simulate paper strategy orders locally without routing
# to any brokerage". A thin binary over the public paper_order API (PaperSimulationEngine::accept_order
# over a PaperOrderRequest) — proves every SYS-3 order type and asset class routes to the internal
# simulation engine, a SYS-4 multi-leg order routes as one composite, and no order reaches a brokerage
# (no Python<->Rust bridge).
[[bin]]
name = "sim001_paper_order_cli"
path = "src/bin/sim001_paper_order_cli.rs"

# atp-data is a real (non-dev) dependency so the backtest engine's SRS-DATA-007 system-catalog
# reader (`store_bar_source::StoreBarSource`) can read the unified historical store as SHIPPED
# product code, not a test stand-in. The dependency direction is allowed (Data Layer -> Simulation
# Engine; see architecture/runtime_services.json dependency_direction.enforced_crates).
[dependencies]
atp-data = { path = "../atp-data" }
atp-strategy-engine = { path = "../atp-strategy-engine" }
atp-types = { path = "../atp-types" }

[lints]
workspace = true
